[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://assets/weapon.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/HitBox.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/HurtBox.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Stats.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 6, 12 )

[sub_resource type="Animation" id=4]
resource_name = "ATTACK"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WeaponSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../WeaponSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31, 0 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_state_finished"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:shape:extents")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 8 ), Vector2( 13, 8 ), Vector2( 16, 8 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -11, 0 ), Vector2( -13, 0 ), Vector2( 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=26]
resource_name = "ATTACK LEFT"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WeaponSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../WeaponSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 31, 0 ), Vector2( -33, 0 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_state_finished"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:shape:extents")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 8 ), Vector2( 13, 8 ), Vector2( 16, 8 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -11, 0 ), Vector2( 13, 0 ), Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=28]
resource_name = "GETHIT"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=29]
resource_name = "GETHIT LEFT"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "IDLE"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=23]
resource_name = "IDLE LEFT"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WeaponSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../WeaponSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 8 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -11, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "WALK"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
resource_name = "WALK LEFT"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WeaponSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WeaponSprite/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "ATTACK"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "ATTACK LEFT"

[sub_resource type="AnimationNodeBlendSpace1D" id=7]
blend_point_0/node = SubResource( 5 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 6 )
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "IDLE"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "IDLE LEFT"

[sub_resource type="AnimationNodeBlendSpace1D" id=10]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "GETHIT LEFT"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "GETHIT"

[sub_resource type="AnimationNodeBlendSpace1D" id=32]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "WALK"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "WALK LEFT"

[sub_resource type="AnimationNodeBlendSpace1D" id=13]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachine" id=19]
states/ATTACK/node = SubResource( 7 )
states/ATTACK/position = Vector2( 501, 131 )
states/IDLE/node = SubResource( 10 )
states/IDLE/position = Vector2( 326, 34 )
states/KNOCKBACK/node = SubResource( 32 )
states/KNOCKBACK/position = Vector2( 262, 137 )
states/MOVE/node = SubResource( 13 )
states/MOVE/position = Vector2( 524, 33 )
transitions = [ "IDLE", "MOVE", SubResource( 14 ), "MOVE", "IDLE", SubResource( 15 ), "IDLE", "ATTACK", SubResource( 16 ), "ATTACK", "IDLE", SubResource( 17 ), "ATTACK", "KNOCKBACK", SubResource( 33 ), "KNOCKBACK", "IDLE", SubResource( 34 ), "IDLE", "KNOCKBACK", SubResource( 35 ), "MOVE", "KNOCKBACK", SubResource( 36 ) ]
start_node = "IDLE"
graph_offset = Vector2( -180, -13 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 5, 11 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_mask = 4
script = ExtResource( 3 )
gravity = 800
jump_height = -300

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="knockbackTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( -1, 0 )
texture = ExtResource( 1 )
hframes = 5
vframes = 4
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PlayerSprite")
anims/ATTACK = SubResource( 4 )
"anims/ATTACK LEFT" = SubResource( 26 )
anims/GETHIT = SubResource( 28 )
"anims/GETHIT LEFT" = SubResource( 29 )
anims/IDLE = SubResource( 1 )
"anims/IDLE LEFT" = SubResource( 23 )
anims/RESET = SubResource( 2 )
anims/WALK = SubResource( 3 )
"anims/WALK LEFT" = SubResource( 24 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 20 )
parameters/ATTACK/blend_position = -0.76304
parameters/IDLE/blend_position = 1.1386
parameters/KNOCKBACK/blend_position = 0
parameters/MOVE/blend_position = 0.345753

[node name="WeaponSprite" type="Sprite" parent="."]
position = Vector2( 31, 0 )
texture = ExtResource( 2 )
hframes = 4

[node name="HitBox" type="Area2D" parent="WeaponSprite"]
collision_layer = 0
collision_mask = 32
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponSprite/HitBox"]
position = Vector2( -11, 0 )
shape = SubResource( 25 )

[node name="raycast_container" type="Position2D" parent="."]
position = Vector2( 0, 16 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -1, 4 )
shape = SubResource( 27 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 6 )
max_health = 3

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="knockbackTimer" to="." method="_on_knockbackTimer_timeout"]
